add meta tags for social

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio Site Showcasing The Work Of Buddy Agyin"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,7 +26,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Buddy Agyin Portfolio</title>
+
+    <!--  Essential META Tags -->
+
+    <meta property="og:title" content="Buddy Agyin | Portfolio">
+    <meta property="og:description" content="Portfolio Site Showcasing The Work Of Buddy Agyin">
+    <meta property="og:image" content="https://github.com/agyin3/images/blob/master/portfolio/portfolio-thumbnail.png?raw=true">
+    <meta property="og:url" content="https://buddyagyin.com">
+    <meta name="twitter:card" content="summary_large_image">
+
+
+    <!--  Non-Essential, But Recommended -->
+
+    <meta property="og:site_name" content="Buddy Agyin | Portfolio">
+    <meta name="twitter:image:alt" content="Screenshot of the website">
+    <title>Buddy Agyin | Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
