remove unused dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/Avatar-Maker.png" />
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway|Montserrat" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -29,17 +31,22 @@
 
     <!--  Essential META Tags -->
 
-    <meta property="og:title" content="Buddy Agyin | Portfolio">
-    <meta property="og:description" content="Portfolio Site Showcasing The Work Of Buddy Agyin">
-    <meta property="og:image" content="https://github.com/agyin3/images/blob/master/portfolio/portfolio-preview-screenshot.png?raw=true">
-    <meta property="og:url" content="https://buddyagyin.com">
-    <meta name="twitter:card" content="summary_large_image">
-
+    <meta property="og:title" content="Buddy Agyin | Portfolio" />
+    <meta
+      property="og:description"
+      content="Portfolio Site Showcasing The Work Of Buddy Agyin"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/agyin3/images/blob/master/portfolio/portfolio-preview-screenshot.png?raw=true"
+    />
+    <meta property="og:url" content="https://buddyagyin.com" />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <!--  Non-Essential, But Recommended -->
 
-    <meta property="og:site_name" content="Buddy Agyin | Portfolio">
-    <meta name="twitter:image:alt" content="Screenshot of the website">
+    <meta property="og:site_name" content="Buddy Agyin | Portfolio" />
+    <meta name="twitter:image:alt" content="Screenshot of the website" />
     <title>Buddy Agyin | Portfolio</title>
   </head>
   <body>
