update website preview image and move ToTop into it's own folder

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#1B262C" />
     <meta
       name="description"
       content="Portfolio Site Showcasing The Work Of Buddy Agyin"
@@ -38,7 +38,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/agyin3/images/blob/master/portfolio/portfolio-preview-screenshot.png?raw=true"
+      content="https://github.com/agyin3/images/blob/master/portfolio/portfolio-screenshot.png?raw=true"
     />
     <meta property="og:url" content="https://buddyagyin.com" />
     <meta name="twitter:card" content="summary_large_image" />
